Allow data and metadata to be updated independently.
